package baiTap.btJ2;

public interface IQuanLy {
    public void them(NhanVien2 nv);
    public void inDS();
}
